Add Community Call recording link

--- a/content/community_calls/2019-07-31 Notes.en.md
+++ b/content/community_calls/2019-07-31 Notes.en.md
@@ -5,8 +5,9 @@ weight: 997
 type: "post"
 ---
 
-The community call was recorded, and these notes will be updated with
-a link to the call once published.
+The community call was recorded, you can listen here.
+
+{{< youtube QDMJlzRw4iw >}}
 
 ### Agenda
 
