adding video as embeddded object using Hugo syntax
Instead of just posting a link, adding the recording as embedded object.

--- a/content/community_calls/2020-01-22 Notes.en.md
+++ b/content/community_calls/2020-01-22 Notes.en.md
@@ -10,6 +10,7 @@ date: 2020-01-17
 ### Recording
 
 [Meeting recording](https://youtu.be/WO2JuBew4wU)
+{{< youtube id="WO2JuBew4wU" >}}
 
 ### Agenda
 
