Added topic to the agenda

--- a/content/community_calls/2020-01-22 Notes.en.md
+++ b/content/community_calls/2020-01-22 Notes.en.md
@@ -41,6 +41,11 @@ date: 2020-01-17
     - ComputerManagementDsc
     - xExchange
 
+- These repositories are no longer at the location. Can we move them to the
+  community organization?
+  - https://github.com/AutomatedLab/DscWorkshop
+  - https://github.com/AutomatedLab/CommonTasks
+
 #### Resources that have been released recently
 
 - ActiveDirectoryDsc: 5.0.0
