--- a/content/community_calls/2020-02-26 Notes.en.md
+++ b/content/community_calls/2020-02-26 Notes.en.md
@@ -1,6 +1,6 @@
 ---
-title: "2020-01-22 Notes"
-weight: 1
+title: "2020-02-26 Notes"
+weight: 992
 type: "post"
 date: 2020-01-17
 ---
@@ -9,7 +9,7 @@ date: 2020-01-17
 
 ### Recording
 
-[Meeting recording](https://youtu.be/WO2JuBew4wU)
+[Meeting recording](https://youtu.be/gZqWw_ePhxs)
 {{< youtube id="gZqWw_ePhxs" >}}
 
 ### Agenda
