Update next community call

--- a/content/community_calls/2020-04-08 Notes.en.md
+++ b/content/community_calls/2020-04-08 Notes.en.md
@@ -43,14 +43,14 @@ Waiting to be published
     - OfficeOnlineServerDsc
 
   - In progress:
-    - 
+    -
     - Others?
 
 - These repositories have moved under DSC Community.
   - https://github.com/dsccommunity/DscWorkshop
   - https://github.com/dsccommunity/CommonTasks
 
-- Raimund Andree presents: Test-DsvcParameterState
+- Raimund Andree presents: Test-DscParameterState
   - Some resources have a huge overlap in Test() and Get() which is a pain for maintenance and testing. The SharePointDsc resource was the first that started with a generic way to compare the current with the desired state. This pattern has been extended and covers almost any type now: string, int, scriptblock, hashtable, CimInstance and PSCredential. Want to do a reverse check as well or handle sorting? Then let’s have a look at Test-DscParameterState.
 
 - Feel free to [send a PR to this file](https://github.com/dsccommunity/dsccommunity.org/blob/master/content/community_calls/next_call.en.md)
