updating community calls

--- a/content/community_calls/2020-05-20 Notes.en.md
+++ b/content/community_calls/2020-05-20 Notes.en.md
@@ -5,13 +5,15 @@ weight: 990
 date: 2020-05-20
 ---
 
-Next call will be on Wednesday, July 1st, at 12 PM PST
+## Recording 
 
-### Agenda
+{{< youtube id="r-eKNZ7iEfw" >}}
+
+### Notes
 
 1. Presentation by Bartek Bielawski: Class Based DSC Resources from the trenches
 [Meeting recording](https://youtu.be/r-eKNZ7iEfw)
-{{< youtube id="r-eKNZ7iEfw" >}}
+
 
 1. Women in PowerShell/DevOps Virtual Event ([Registration](https://forms.office.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR3MzvXWY1M5Jk_te2iUV50tUNFhEM1lMMTREMjM4NEFBVlpUQUZSMUdUUy4u))
 1. Open discussion - SqlServerDsc: Renaming resources that contain '*Server*'
