--- a/content/community_calls/2020-08-12 Notes.en.md
+++ b/content/community_calls/2020-08-12 Notes.en.md
@@ -5,18 +5,11 @@ type: "post"
 date: 2020-08-12
 ---
 
-Next call will be on Wednesday, August 12th, at 12 PM PST
+## Recording
 
-### Discussions
+{{< youtube id="UgxzwrkWXxs" >}}
 
-Topics or questions from the community (welcome at any point during the call)
-
-Talk to us on **Virtual PowerShell User Group** _#DSC_ channel.
-For information on how to join, see https://dsccommunity.org/community/contact/
-
-Want to submit a question to discuss during the call so others can prepare? Just [submit a Pull request to this file](https://github.com/dsccommunity/dsccommunity.org/edit/master/content/community_calls/next_call.en.md)!
-
-### Agenda
+## Notes
 
 1. Quick update on activity:
    - Migration to Continuous Delivery Process ([GitHub Board](https://github.com/orgs/dsccommunity/projects/1)):
