--- a/content/community_calls/2021-11-17 Notes.en.md
+++ b/content/community_calls/2021-11-17 Notes.en.md
@@ -15,10 +15,18 @@ date: 2021-11-17
   it in the pipeline (well, all of them) need to change to 'ubuntu-latest'.
   Example: https://github.com/dsccommunity/SqlServerDsc/pull/1733/files
 - Azure Devops has deprecated the build worker Windows Server 2016 ('windows-2016').
-  Repos using tha for unit test or integration tests need to move to 'windows-2019',
-  'windows-2022', or 'windows-latest' before March 2022.
+  Repos using that for unit test or integration tests need to move to 'windows-2019',
+  'windows-2022', or 'windows-latest' before March 2022. This may cause problems
+  with assuring support on older operating systems. It could even result in support
+  for older operating systems to be dropped for DSC resources, unless the community
+  can find a way to easily run integration test on these older but still
+  (by Microsoft) supported operating systems.
 
-Do the community have any other activity updates?
+Community updates.
+
+- Gael showed off how to set up a pipeline for your Choco package. See video above.
+- Raimund talked about the DscWorkshop project, and Gael showed a demo. See video
+  above.
 
 #### DSC resource modules that have been released recently
 
@@ -43,5 +51,5 @@ _Submit your questions, or raise them directly in the call._
 
 #### Next Community Call
 
-Next community call is on the 17th of November.
+Next community call is on the 9th of February.
 Suggestions for talks are welcomed.
