--- a/content/community_calls/2021-11-17 Notes.en.md
+++ b/content/community_calls/2021-11-17 Notes.en.md
@@ -47,7 +47,7 @@ Community updates.
 
 #### Community questions
 
-_Submit your questions, or raise them directly in the call._
+See video for community questions that was raised.
 
 #### Next Community Call
 
