--- a/content/community_calls/2023-04-05 Notes.en.md
+++ b/content/community_calls/2023-04-05 Notes.en.md
@@ -1,19 +1,19 @@
 ---
-title: "2023-08-09 Notes"
-weight: 971
+title: "2023-04-05 Notes"
+weight: 972
 type: "post"
 date: 2023-02-20
 ---
 
 ### Recording
 
-{{< youtube id="TBD" >}}
+{{< youtube id="QsyyN6ejNA4" >}}
 
 ## Agenda
 
 #### Community presentation
 
-**"Update on DSC version 3"** presented by Steve Lee, Michael Greene, Michael Lombardi
+**nxtools and DSC v3**
 
 ### DSC resource modules that have been released recently
 
