--- a/content/community_calls/2023-09-20 Notes.en.md
+++ b/content/community_calls/2023-09-20 Notes.en.md
@@ -1,13 +1,13 @@
 ---
-title: "2023-08-09 Notes"
+title: "2023-09-20 Notes"
 weight: 971
 type: "post"
-date: 2023-02-20
+date: 2023-09-20
 ---
 
 ### Recording
 
-{{< youtube id="TBD" >}}
+{{< youtube id="96x2wfS-mUg" >}}
 
 ## Agenda
 
