Update community call March and URL fix

--- a/content/community_calls/2025-02-06 Notes.en.md
+++ b/content/community_calls/2025-02-06 Notes.en.md
@@ -7,7 +7,7 @@ date: 2025-02-07
 
 ### Recording
 
-{{< youtube id="UcpIFYOBLKA&t" >}}
+{{< youtube id="UcpIFYOBLKA" >}}
 
 ## Agenda
 
@@ -23,6 +23,7 @@ Mikey and Steve discussed the importance of class-based resources for DSC V3 and
 
 - Releases
 - Preview
+
 #### Tooling modules that have been released recently
 
 - Releases
