--- a/content/community_calls/2025-03-29 Notes.en.md
+++ b/content/community_calls/2025-03-29 Notes.en.md
@@ -21,7 +21,7 @@ None
 - Integration with Winget: The team explores the collaboration with Winget, emphasizing the vision for seamless developer environment setups and resource creation.
 - LCM and Transition Concerns: Chris raises concerns about the transition from DSC V1/V2 to V3, particularly for existing configurations and the need for an LCM. Steve and Jason address these concerns, discussing potential solutions and the importance of backward compatibility.
 - Credential Management: Steve outlines plans for secure credential handling in DSC V3, including the use of parameters and potential integration with secret management modules.
-- Documentation and Tutorials: Mikey and Jason share their efforts to improve documentation and provide tutorials for DSC V3, aiming to support the community in resource creation and adoption. 48:09
+- Documentation and Tutorials: Mikey and Jason share their efforts to improve documentation and provide tutorials for DSC V3, aiming to support the community in resource creation and adoption.
 
 ### DSC resource modules that have been released recently
 
